# bootcamplinuxpython

./: .gitignore  LICENSE  README.md
contenido.curso/003.recursos/LVL-4/LVL4.03.creacion.proyecto/bootcamp/: pyproject.toml
contenido.curso/003.recursos/LVL-4/LVL4.03.creacion.proyecto/bootcamp/demo/config/messages/: mensajes.json
contenido.curso/003.recursos/LVL-4/LVL4.06.calidad.proyecto/calidad/: pyproject.toml  setup.cfg
material.apoyo/trabajo.final/V1/: Makefile  README.md  __meta__.py  apolo-11.py  pyproject.toml  setup.cfg
material.apoyo/trabajo.final/V1/documentacion/criterios.desarrollados/: 001.index.documentacion.xlsx
material.apoyo/trabajo.final/V1/nasa/comunes/: constantes.py  decoradores.py  excepcion.py  inicializador.py  parametros.py  utilitarios.py
material.apoyo/trabajo.final/V1/nasa/config/archivos/: app.yaml  mensajes.yaml
material.apoyo/trabajo.final/V1/nasa/config/logotipos/: nasa  softserve
material.apoyo/trabajo.final/V1/nasa/modelamiento/abstraccion/: operaciones_os.py  reportes.py
material.apoyo/trabajo.final/V1/nasa/modelamiento/enumeradores/: reportes.py
material.apoyo/trabajo.final/V1/nasa/modelamiento/herencia/: acciones_os.py
material.apoyo/trabajo.final/V1/nasa/modelamiento/modelo/: archivos.py
material.apoyo/trabajo.final/V1/nasa/modelamiento/propiedades/: instancias.py
material.apoyo/trabajo.final/V1/nasa/negocio/: generardor.py  reportes.py
material.apoyo/trabajo.final/V1/tests/: conftest.py
material.apoyo/trabajo.final/V1/tests/comunes/: constantes.py  decoradores.py  excepciones.py  inicializador.py  parametros.py  utilitarios_funcionalidades.py  utilitarios_struct.py
material.apoyo/trabajo.final/V1/tests/modelamiento/: enumeradores.py  modelo.py
material.apoyo/trabajo.final/V1/tests/nasa/config/archivos/: mensajes.yaml
material.apoyo/trabajo.final/V1/tests/negocio/: generador_reporte.py
(+225 files in other folders)
