# TECDEV: SEC#3, ID#21, MANEJO DE DEPENDENCIAS
[tool.poetry]
name = "nasa"
version = "0.1.0"
description = ""
authors = ["luisvasv"]
readme = "README.md"

# librerias principales de la app
[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
tabulate = "^0.9.0"
pandas = "^2.2.0"

# librerias para validar codigo
[tool.poetry.group.desarrollador.dependencies]
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"
pytest = "^8.0.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
